contact page txt fix, spacing change

--- a/src/style/contacts.scss
+++ b/src/style/contacts.scss
@@ -28,4 +28,8 @@
         background-position-y: bottom;
         background-position-x: center;
     }
+
+    .stip-mapContainer{
+        margin-top: 5em;
+    }
 }
