--- a/src/style/index.css
+++ b/src/style/index.css
@@ -221,6 +221,9 @@ b {
     background-position-y: bottom;
     background-position-x: center;
   }
+  .stip-mapContainer {
+    margin-top: 5em;
+  }
 }
 
 .stip-privacyContainer {
